objects/ccpe_ppm__Program__c.object
<CustomObject>
    <fields>
        <fullName>ccpe_ppm__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccpe_ppm__End__c</fullName>
        <label>Latest Project End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccpe_ppm__Portfolio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio</label>
        <referenceTo>ccpe_ppm__Portfolio__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpe_ppm__Start__c</fullName>
        <label>Earliest Project Start</label>
        <type>Date</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>ccpe_ppm__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>